--- a/index.html
+++ b/index.html
@@ -20,18 +20,23 @@
             border-radius: 12px;
             box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
             text-align: center;
-            width: 400px;
+            width: 100%;
+            max-width: 400px; /* Ancho máximo para pantallas grandes */
             min-height: 300px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
         }
         .profile-img {
-            width: 140px;
-            height: 137px;
+            width: 140px; /* Tamaño fijo para la imagen */
+            height: 140px; /* Mantener la proporción de la imagen */
             border-radius: 50%;
             object-fit: cover;
             border: 4px solid #007BFF;
         }
         h1 {
-            font-size: 24px;
+            font-size: 24px; /* Tamaño de fuente estándar */
             margin: 15px 0;
             color: #333;
         }
@@ -44,7 +49,6 @@
             margin-top: 20px;
         }
         .contact a {
-            display: block;
             font-size: 18px;
             color: #007BFF;
             text-decoration: none;
@@ -52,6 +56,48 @@
         }
         .contact a:hover {
             text-decoration: underline;
+        }
+
+        /* Media Queries para pantallas pequeñas (smartphones) */
+        @media (max-width: 600px) {
+            .container {
+                width: 95%;
+                padding: 15px;
+            }
+            .profile-img {
+                width: 120px; /* Ajustar el tamaño de la imagen */
+                height: 120px;
+            }
+            h1 {
+                font-size: 22px; /* Ajuste en el tamaño de la fuente */
+            }
+            p {
+                font-size: 16px; /* Ajuste en el tamaño de la fuente */
+            }
+            .contact a {
+                font-size: 16px; /* Ajuste en el tamaño de la fuente */
+            }
+        }
+
+        /* Media Queries para pantallas medianas (tabletas) */
+        @media (max-width: 900px) {
+            .container {
+                width: 90%;
+                padding: 25px;
+            }
+            .profile-img {
+                width: 130px; /* Ajustar el tamaño de la imagen */
+                height: 130px;
+            }
+            h1 {
+                font-size: 22px;
+            }
+            p {
+                font-size: 16px;
+            }
+            .contact a {
+                font-size: 16px;
+            }
         }
     </style>
 </head>
@@ -62,7 +108,7 @@
         <h1>Gremio de Mecánicos Unidos.</h1>
         <p>San Miguel de Tucumán</p>
 
-           <div  class="contact">
+        <div class="contact">
             <a href="tel:+123456789">📞 +54 9 381 513-3824</a>
         </div>
     </div>
