--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 <body>
 
     <div class="container">
-        <img href="https://github.com/Matias837/mi-portafolio-web/blob/main/logo.jpg">
+        <img src="https://github.com/Matias837/mi-portafolio-web/blob/main/logo.jpg" alt="Foto de perfil" class="profile-img">
         <h1>Gremio de Mecánicos Unidos.</h1>
         <p>San Miguel de Tucumán</p>
 
