--- a/index.html
+++ b/index.html
@@ -3,115 +3,148 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perfil del Usuario</title>
+    <title>Tarjeta de Presentación</title>
     <style>
-        body {
+        /* Reset de estilos */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
             font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
+        }
+
+        /* Fondo general */
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            margin: 0;
+            background-color: #CCF0D6; /* Verde claro */
         }
-        .container {
+
+        /* Tarjeta principal */
+        .card {
+    width: 380px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+}
+
+        /* Cabecera con diseño en diagonal */
+        .header {
+            background: linear-gradient(135deg, #FCA862 50%, #CCF0D6 50%);
+            height: 140px;
+            position: relative;
+        }
+
+        /* Logo o nombre en cabecera */
+        .logo {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             background: white;
-            padding: 30px;
-            border-radius: 12px;
-            box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-            text-align: center;
-            width: 100%;
-            max-width: 400px; /* Ancho máximo para pantallas grandes */
-            min-height: 300px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            padding: 6px 12px;
+            font-size: 14px;
+            font-weight: bold;
+            border-radius: 4px;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
         }
+
+        /* Imagen de perfil */
         .profile-img {
-            width: 140px; /* Tamaño fijo para la imagen */
-            height: 140px; /* Mantener la proporción de la imagen */
-            border-radius: 50%;
-            object-fit: cover;
-            border: 4px solid #007BFF;
+    width: 140px;
+    height: 140px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 4px solid white;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+        /* Información de contacto */
+        .info {
+            padding: 70px 20px 20px;
         }
-        h1 {
-            font-size: 24px; /* Tamaño de fuente estándar */
-            margin: 15px 0;
+
+        .info h1 {
+            font-size: 22px;
             color: #333;
+            margin-bottom: 5px;
         }
-        p {
-            font-size: 18px;
+
+        .info p {
+            font-size: 16px;
             color: #666;
-            margin: 8px 0;
         }
+
+        /* Sección de contacto */
         .contact {
-            margin-top: 20px;
-        }
-        .contact a {
-            font-size: 18px;
-            color: #007BFF;
-            text-decoration: none;
+            margin-top: 15px;
+            font-size: 14px;
+            color: #333;
             font-weight: bold;
         }
+
+        .contact a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+
         .contact a:hover {
             text-decoration: underline;
         }
 
-        /* Media Queries para pantallas pequeñas (smartphones) */
-        @media (max-width: 600px) {
-            .container {
-                width: 95%;
-                padding: 15px;
-            }
-            .profile-img {
-                width: 120px; /* Ajustar el tamaño de la imagen */
-                height: 120px;
-            }
-            h1 {
-                font-size: 22px; /* Ajuste en el tamaño de la fuente */
-            }
-            p {
-                font-size: 16px; /* Ajuste en el tamaño de la fuente */
-            }
-            .contact a {
-                font-size: 16px; /* Ajuste en el tamaño de la fuente */
-            }
+        /* Pie de tarjeta */
+        .footer {
+            font-size: 12px;
+            color: #777;
+            padding: 12px;
+            text-align: center;
+            background-color: #FCA862; /* Naranja */
+            border-bottom-left-radius: 12px;
+            border-bottom-right-radius: 12px;
+            font-weight: bold;
         }
 
-        /* Media Queries para pantallas medianas (tabletas) */
-        @media (max-width: 900px) {
-            .container {
-                width: 80%;
-                padding: 25px;
+        /* Responsividad */
+        @media (max-width: 400px) {
+            .card {
+                width: 95%;
             }
-            .profile-img {
-                width: 130px; /* Ajustar el tamaño de la imagen */
-                height: 130px;
+            .info h1 {
+                font-size: 20px;
             }
-            h1 {
-                font-size: 22px;
-            }
-            p {
-                font-size: 16px;
-            }
-            .contact a {
-                font-size: 16px;
+            .info p {
+                font-size: 14px;
             }
         }
     </style>
 </head>
 <body>
 
-    <div class="container">
-        <img src="https://raw.githubusercontent.com/Matias837/mi-portafolio-web/refs/heads/main/logo.jpg" alt="Foto de perfil" class="profile-img">
-        <h1>Gremio de Mecánicos Unidos.</h1>
-        <p>San Miguel de Tucumán</p>
+    <div class="card">
+        <div class="header">
 
-        <div class="contact">
-            <a href="tel:+123456789">📞 +54 9 381 513-3824</a>
+        </div>
+        <img src="https://raw.githubusercontent.com/Matias837/mi-portafolio-web/refs/heads/main/logo.jpg" alt="Foto de perfil" class="profile-img">
+        <div class="info">
+            <h1>Gremio de Mecanicos Unidos</h1>
+            <p>San Miguel de Tucuman</p>       
+                       <div class="contact">
+                📞 <a href="tel: +54 9 381 513 38-24">+54 9 381513 38-24</a> |
+                 ✉ <a href="mailto:correo@example.com">correo@example.com</a>
+                </div>
+        </div>
+        <div class="footer">
+            Tu empresa o lema aquí
         </div>
     </div>
 
 </body>
-</html>
+</html> 
