--- a/index.html
+++ b/index.html
@@ -1,1 +1,150 @@
-hola mundo
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarjeta de Presentación</title>
+    <style>
+        /* Reset de estilos */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
+
+        /* Fondo general */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #CCF0D6; /* Verde claro */
+        }
+
+        /* Tarjeta principal */
+        .card {
+            width: 350px;
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+            text-align: center;
+            position: relative;
+        }
+
+        /* Cabecera con diseño en diagonal */
+        .header {
+            background: linear-gradient(135deg, #FCA862 50%, #CCF0D6 50%);
+            height: 140px;
+            position: relative;
+        }
+
+        /* Logo o nombre en cabecera */
+        .logo {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
+            background: white;
+            padding: 6px 12px;
+            font-size: 14px;
+            font-weight: bold;
+            border-radius: 4px;
+            box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        /* Imagen de perfil */
+        .profile-img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid white;
+            position: absolute;
+            top: 90px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+
+        /* Información de contacto */
+        .info {
+            padding: 70px 20px 20px;
+        }
+
+        .info h1 {
+            font-size: 22px;
+            color: #333;
+            margin-bottom: 5px;
+        }
+
+        .info p {
+            font-size: 16px;
+            color: #666;
+        }
+
+        /* Sección de contacto */
+        .contact {
+            margin-top: 15px;
+            font-size: 14px;
+            color: #333;
+            font-weight: bold;
+        }
+
+        .contact a {
+            text-decoration: none;
+            color: #007BFF;
+        }
+
+        .contact a:hover {
+            text-decoration: underline;
+        }
+
+        /* Pie de tarjeta */
+        .footer {
+            font-size: 12px;
+            color: #777;
+            padding: 12px;
+            text-align: center;
+            background-color: #FCA862; /* Naranja */
+            border-bottom-left-radius: 12px;
+            border-bottom-right-radius: 12px;
+            font-weight: bold;
+        }
+
+        /* Responsividad */
+        @media (max-width: 400px) {
+            .card {
+                width: 95%;
+            }
+            .info h1 {
+                font-size: 20px;
+            }
+            .info p {
+                font-size: 14px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <div class="card">
+        <div class="header">
+            <div class="logo">Tu Logo</div>
+        </div>
+        <img src="tu-foto.jpg" alt="Foto de perfil" class="profile-img">
+        <div class="info">
+            <h1>Tu Nombre</h1>
+            <p>Tu ocupación o especialidad</p>
+            <div class="contact">
+                📞 <a href="tel:+123456789">+123456789</a> |
+                ✉ <a href="mailto:correo@example.com">correo@example.com</a>
+            </div>
+        </div>
+        <div class="footer">
+            Tu empresa o lema aquí
+        </div>
+    </div>
+
+</body>
+</html>
