--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+<html lang="es"><head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tarjeta de Presentación</title>
+    <style>
+        /* Reset de estilos */
+        * {
+            margin: 0;
+            padding: 0;<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -146,5 +154,6 @@
         </div>
     </div>
 
-</body>
-</html>
+
+
+</body></html>
